[package]
name = "story"
version = "0.0.3"
authors = ["Felipe Sere <felipesere@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
anyhow = "1.0.37"
async-std = { version = "1.8.0", features = ["unstable", "attributes"]}
async-trait = "0.1.42"
clap = { version = "^3.0" , features = ["derive", "color"] }
colored_json = "2.1.0"
console = "0.15.0"
ctrlc = "3.1.7"
dialoguer = "^0.9"
directories-next = "2.0.0"
edit = "0.1.2"
futures = "0.3"
git2 = "0.13.17"
indicatif = "^0.16"
serde = "1.0.118"
serde_json = "1.0.61"
shellexpand = "2.1.0"
surf = "2.1.0"

[build-dependencies]
built = { version = "^0.5", features = ["git2"] }
