[package]
name = "story"
version = "0.0.4"
authors = ["Felipe Sere <github@felipesere.com>"]
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.37"
async-std = { version = "1.8.0", features = ["unstable", "attributes"]}
async-trait = "0.1.42"
base64 = "0.13.0"
clap = { version = "^3.0" , features = ["derive", "color"] }
colored_json = "3.0.1"
console = "0.15.0"
ctrlc = "3.1.7"
dialoguer = { version = "^0.10", features = ["fuzzy-select"] }
directories-next = "2.0.0"
edit = "0.1.2"
env_logger = "0.9.0"
fs-err = "2.8.1"
futures = "0.3"
git2 = "0.13.17"
indicatif = "^0.17"
jsonpath = "0.1.1"
log = "0.4.14"
serde = "1.0.118"
serde_json = "1.0.61"
shellexpand = "2.1.0"
surf = "2.1.0"

[build-dependencies]
built = { version = "^0.5", features = ["git2"] }
